--- a/source/tools/index.html
+++ b/source/tools/index.html
@@ -233,9 +233,9 @@ layout: false
 
 
   <footer class="container-fluid text-center">
-    <a href="/blog/" title="To Top">
+    <a href="/TripOne/" title="To Top">
       <span class="glyphicon glyphicon-chevron-up"></span>
-    </a>
+    </a>    
   </footer>
   <!--jQuery datepicker 開始-->
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
